# logs

./: .gitignore  CHANGELOG.md  README.md  analyze_profiles.py  detect_from_tree.py  extract_device_info.py  generate_sysdiag_report.py  generate_sysdiag_report.sh  generate_sysdiag_report_t2.py  generate_sysdiag_report_v11.sh  generate_sysdiag_report_v13.py  ios_backup_cert_check.py  ios_backup_full_check.py  jb_detector.py  parse_ios_backup.sh  parse_ios_backup_v4.sh  process_analyzer.py  process_analyzer_v3.py  pyproject.toml  restore_ios_backup.py
datalogic/: __init__.py  cli.py
datalogic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
datalogic/ios/backup/: analyze_profiles.py  dataset_utils.py  ios_backup_cert_check.py  ios_backup_full_check.py  parse_ios_backup.py  restore_ios_backup.py
datalogic/ios/sysdiag/: extract_device_info.py  generate_sysdiag_report.py  process_analyzer.py
datalogic/security/: jb_detector.py
datalogic/utils/: __init__.py  json_utils.py
demo_data/: README.md  ios_backup_full_check_jb.py  parse_ios_backup_v3.sh  sample_privileged_tree.txt
drafts/: README.md
iocs/: behavior.json  domains.json  paths.json
scripts/: fetch_release_assets.py
